objects/ASI_MFM_Purchase_Request_Line__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CTY_CN_Vendoe_IsNeedComparePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Need Compare Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Account_Code__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Supplier__r.ASI_MFM_Customer_Supplier_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_All_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_BA1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval BA1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_BA1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_BA2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval BA2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_BA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_BA3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval BA3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_BA3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_Buyer_Manger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval Buyer Manger</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_Buyer_Manger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_Buyer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_MKT_Manage1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval MKT Manager1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_MKTManger1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_MKT_Manage2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval MKT Manager2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_MKTManger2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_MKT_Manage3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval MKT Manager3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_MKTManger3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Approval_MKT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval MKT</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Request_Lines_MKT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Bidding_Deadline__c</fullName>
        <label>Bidding Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <referenceTo>ASI_MFM_Buyer_Master__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Category__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Item_Group_Code__r.ASI_MFM_Category_Level_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_IsAllowEdit__c</fullName>
        <formula>IF(  OR(TEXT(ASI_CTY_CN_Vendor_Status__c) ==&apos;Draft&apos;,TEXT(ASI_CTY_CN_Vendor_Status__c) ==&apos;Recall&apos;,TEXT(ASI_CTY_CN_Vendor_Status__c) ==&apos;Reject&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAllowEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_IsBuyerApprove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Buyer Approve</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_IsMerged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_IsSelectQuotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Select Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Is_MKT_Submit__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is MKT Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Is_Need_MKT_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Need MKT Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Item_Group_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Last_Offer__c</fullName>
        <label>Last Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Model_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Model Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Quantity__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Total_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Quotation</label>
        <referenceTo>ASI_CRM_Quotation__c</referenceTo>
        <relationshipLabel>Purchase Request Lines (Merge Quotation)</relationshipLabel>
        <relationshipName>PRLineItem_MergeQuotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Sample_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Sample__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Sample Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Total_Freight__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Merge_Total_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Total_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Win Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Merge_Unit_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Merge_Quotation__r.ASI_CTY_CN_Vendor_Unitl_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Model_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Model_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Model Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_PO_Number__c</fullName>
        <formula>&apos;P-000000000001&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Quantity__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Sample_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Sample__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Sample_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Select_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>ASI_CRM_Quotation__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines_Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Distribution</fullName>
                    <label>Pending for Buyer(Assign)</label>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                    <label>Pending for Buyer(Quation)</label>
                </value>
                <value>
                    <fullName>Reject</fullName>
                    <label>Rejected</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Generate PO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_SubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Purchase Request Lines (Sub-brand)</relationshipLabel>
        <relationshipName>Vndor_SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Sub_brand__c</fullName>
        <formula>ASI_CTY_CN_Vendor_SubBrand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PR Line Item List</relationshipLabel>
        <relationshipName>PRLineItem_Supplier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Total_Freight__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Total_Freight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Total_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Total_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Total_Quantity__c</fullName>
        <label>Total Quantity Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_Unit_Price__c</fullName>
        <formula>ASI_CTY_CN_Vendor_Select_Quotation__r.ASI_CTY_CN_Vendor_Unitl_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CTY_CN_Vendor_proId__c</fullName>
        <description>用来做业务逻辑，无含义</description>
        <label>proId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_APCode__c</fullName>
        <formula>ASI_MFM_AP_Code__r.ASI_MFM_AP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_AP_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AP Code</label>
        <referenceTo>ASI_MFM_AP_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Account_Number__c</fullName>
        <formula>TEXT(ASI_MFM_Purchase_Request__r.ASI_MFM_Company_Code__c)  +&apos;1P&apos;+ ASI_MFM_Plan_Line_Item__r.ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Code__c +&apos;01.&apos;+ ASI_MFM_Plan_Line_Item__r.ASI_MFM_A_C_Code__r.ASI_MFM_A_C_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Actual_Spending_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>In Local Currency</description>
        <label>Actual Spending Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_in_Local_Currency__c</fullName>
        <formula>ASI_MFM_Estimated_PR_budget__c * ASI_MFM_Purchase_Request__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated PR budget in Local Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Basic_POSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Basic POSM</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>KR MFM SKU</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.Name</field>
                <operation>startsWith</operation>
                <value>9</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Consumer_Prize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consumer Prize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Estimated_PR_budget__c</fullName>
        <label>Estimated PR budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_Subledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subledger</label>
        <referenceTo>ASI_TnE_Branch_Channel__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>prLine_Subledger</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_KR_countAttach__c</fullName>
        <label>Count Attach</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PO_Amount_in_PR_Currency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PO Amount in PR Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_PurchaseRequests_Line_ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>Purchase Requests Line External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purchase_Request__c</fullName>
        <label>Purchase Request</label>
        <referenceTo>ASI_MFM_Purchase_Request__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Rest_Amount__c</fullName>
        <formula>ASI_MFM_Estimated_PR_budget__c  - ASI_MFM_PO_Amount_in_PR_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_ledger__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipLabel>Purchase Request Lines</relationshipLabel>
        <relationshipName>Purchase_Request_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>DZ</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>GM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Cost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Request Line</label>
    <nameField>
        <displayFormat>PRL{00000}</displayFormat>
        <label>Purchase Request line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Request Lines</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_Vendor_Purchase_Request_Line</fullName>
        <active>true</active>
        <label>CN Purchase Request Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Purchase_Request_Line</fullName>
        <active>true</active>
        <label>KR Purchase Request Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>